# datadictionary

./: .gitignore  .secrets.baseline  .travis.yml  Pipfile  README.md  dev-requirements.txt  example_validation.py  pyproject.toml  schema.json  setup.py
.github/workflows/: test.yml
gdcdictionary/: demographic.yaml  schema_test.py
gdcdictionary/examples/valid/: acknowledgement.json  aligned_reads_index.json  aliquot.json  case.json  (+18 more)
gdcdictionary/generated_schemas/: pcdc-schema-dev.json
gdcdictionary/schema-inrg/: init_trials.yaml  inrg.yaml  relapse_sites_specific.yaml  submitted_unaligned_reads.yaml
gdcdictionary/schemas/: EKG.yaml  _definitions.yaml  _terms.yaml  acknowledgement.yaml  adverse_event.yaml  aligned_reads_file.yaml  aligned_reads_index.yaml  aliquot.yaml  biopsy_surgical_procedure.yaml  biospecimen.yaml  case.yaml  cellular_immunotherapy.yaml  clinical_event.yaml  clinical_event_attribute_value.yaml  clinical_test.yaml  concomitant_medication.yaml  core_metadata_collection.yaml  course_timing.yaml  cytology.yaml  demographic.yaml  demographics.yaml  diagnosis.yaml  disease_characteristic.yaml  disease_phase_timing.yaml  echocardiogram.yaml  encounter.yaml  experiment.yaml  experimental_metadata.yaml  exposure.yaml  external_reference.yaml  family_history.yaml  family_medical_history.yaml  function_test.yaml  growing_teratoma_syndrome.yaml  histology.yaml  imaging.yaml  immunohistochemistry.yaml  keyword.yaml  lab.yaml  late_effect.yaml  (+48 more)
tests/: auth_mock.py  conftest.py  submission_test.py  test_json_validation.py  test_schema.py  utils.py
