[tool.poetry]
name = "gen3Dictionary"
version = "2.0.2"
description = ""
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "~5.3.1"
jsonschema = "*"
dictionaryutils = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
