[tool.poetry]
name = "gen3Dictionary"
version = "2.0.4"
description = ""
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "gdcdictionary"}]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = ">= 6.0"
jsonschema = "*"
dictionaryutils = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
